<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Settings">Settings</string>
    <string name="URL">http://ws.optimus.ba/MB/Authenticate.asmx/</string>
    <string name="app_name">WurthMB</string>
    <string name="sourcecode">http://www.sourcecode.ba</string>
    <string name="sourcecodefooter">OptimusMB is a service provided by Source Code\n Copyright © #Year# Source Code d.o.o. Tuzla. Nesiba Malkica 20, 75000 Tuzla BIH. All rights reserved.</string>
    <string name="pref_locale">ba</string>
    <string name="SignInOptimus">Sign in to Optimus</string>
    <string name="FillLogin">Fill up the below form to get access to platform</string>
    <string name="WhichModule">Which module would you like to run?</string>
    <string name="Actions">Actions</string>
    <string name="CreateOrder">Create order</string>
    <string name="CreateRoute">Create a route</string>
    <string name="NoteVisit">Note a visit</string>
    <string name="AddClient">Add client</string>
    <string name="Sections">Sections</string>
    <string name="Options">Options</string>
    <string name="Quit">Quit</string>
    <string name="Yesterday">Yesterday</string>
    <string name="ThisMonth">This month</string>
    <string name="Today">Today</string>
    <string name="ThisMonthRevenue">This mohtn revenue</string>
    <string name="ThisMonthPlaned">Planed revenue for this month</string>
    <string name="ThisMonthPlanedPercentage">This month revenue percentage</string>
    <string name="ThisMonthPlanedByDay">Planed revenue by day</string>
    <string name="RevenueToday">Today revenue</string>
    <string name="RevenueYesterday">Yesterday revenue</string>
    <string name="ChooseSyncOptions">Please choose what you want to synchronize</string>
    <string name="SyncOnlyUpdates">Sync only updates</string>
    <string name="AllSections">All sections</string>
    <string name="UpdateType">Update type</string>
    <string name="Progress">Progress</string>
    <string name="CheckInternet">Check if Internet is available</string>
    <string name="InternetAvailable">Internet available</string>
    <string name="ItemsSynchronized">Items synchronized</string>
    <string name="StartingSynchronization">Starting synchronization</string>
    <string name="ClientsSynchronization">Clients synchronization</string>
    <string name="ClientsSynchronized">Clients synchronized</string>
    <string name="ProductsSynchronization">Products synchronization</string>
    <string name="ProductsSynchronized">Products synchronized</string>
    <string name="PricelistSynchronization">Pricelist synchronization</string>
    <string name="PricelistSynchronized">Pricelist synchronized</string>
    <string name="OrdersSynchronization">Orders synchronization</string>
    <string name="OrdersSynchronized">Orders synchronized</string>
    <string name="AdditionalSynchronization">Additional synchronization</string>
    <string name="AdditionalSynchronized">Additional items synchronized</string>
    <string name="RoutesSynchronization">Routes synchronization</string>
    <string name="RoutesSynchronized">Routes items synchronized</string>
    <string name="VisitsSynchronization">Visits synchronization</string>
    <string name="VisitsSynchronized">Visits synchronized</string>
    <string name="StocksSynchronization">Stocks synchronization</string>
    <string name="StocksSynchronized">Stocks synchronized</string>
    <string name="TasksSynchronized">Tasks synchronized</string>
    <string name="AssortmentsSynchronized">Assortments synchronized</string>
    <string name="Synchronization">Synchronization</string>
    <string name="SynchronizationEnabled">Synchronization enabled</string>
    <string name="SynchronizationEnabledDesc">Enable data synchronization for this device</string>
    <string name="SynchronizationUse3G">Use 3G network</string>
    <string name="SynchronizationUse3GDesc">Enable usage of 3G network</string>
    <string name="SynchronizationSyncInterval">Activities synchronization interval</string>
    <string name="SynchronizationSyncIntervalDesc">Set interval for user activities synchronization</string>
    <string name="SynchronizationSyncIntervalServer">Server updates interval</string>
    <string name="SynchronizationSyncIntervalServerDesc">Set interval for server updates interval</string>
    <string name="SynchronizationUse3GDocuments">Use 3G network for documents</string>
    <string name="SynchronizationUse3GDocumentsDesc">Enable usage of 3G network when synchronizing documents</string>
    <string name="SynchronizationLocations">Enable location synchronization</string>
    <string name="SynchronizationLocationsDesc">Allow device to send you location to the server</string>
    <string name="Locations">Locations</string>
    <string name="LocationEnabled">Location service enabled</string>
    <string name="LocationsEnabledDesc">Enable GPS location service for this device</string>
    <string name="LocationsSyncInterval">Location acquiring interval</string>
    <string name="LocationsSyncIntervalDesc">Set interval for GPS location acquiring</string>
    <string name="SetDefault">Set default</string>
    <string name="TechDesc">Tech Description</string>
    <string name="SimilarProducts">Similar products</string>
    <string name="SafetyProducts">Safety at work products</string>
    <string name="General">General</string>
    <string name="Additional">Additional</string>
    <string name="Order_PleaseChooseClient">Please choose client that you creating order for</string>
    <string name="Order_SetProperties">Please set order properties</string>
    <string name="Order_Items">Order items</string>
    <string name="Order_Save">Save order</string>
    <string name="OrderType_Visit">By visit</string>
    <string name="OrderType_Telephone">By phone</string>
    <string name="OrderType_Tele">Telemarketing</string>
    <string name="OrderType_Email">By email</string>
    <string name="OrderType_Other">Other</string>
    <string name="OrderDeliveryType_Complete">Complete</string>
    <string name="OrderDeliveryType_Fast6">Fast order (6 hours)</string>
    <string name="OrderDeliveryType_Fast24">Fast order (24 hours)</string>
    <string name="OrderStatus_Template">Template</string>
    <string name="OrderStatus_Offer">Offer</string>
    <string name="OrderStatus_GetOffer">RFQ</string>
    <string name="OrderStatus_Approved">Approved</string>
    <string name="OrderAdditional_Title">Delivery address</string>
    <string name="OrderAdditional_CompanyName">Company name</string>
    <string name="OrderAdditional_Name">Person name</string>
    <string name="OrderAdditional_DeliveryDate">Delivery date</string>
    <string name="OrderAdditional_AddItem">Add product</string>
    <string name="OrderAdditional_AddedItems">Added items</string>
    <string name="Order_CodeUser">User code</string>
    <string name="Order_CodeClient">Client code</string>
    <string name="Notification_ClientNotSelected">You must select the client</string>
    <string name="Notification_DeliveryPlaceNotSelected">You must select the delivery place</string>
    <string name="Notification_PaymentMethodNotSelected">You have not selected payment method</string>
    <string name="Notification_OrderDateHigherDeliveryDate">Order date is higher that delivery date</string>
    <string name="Notification_OrderDateHigherPaymentDate">Order date is higher that payment date</string>
    <string name="Notification_ItemMissing">You must add some items to the order</string>
    <string name="Notification_OrderExist">There is already order in progress. What would you like to do ?</string>
    <string name="Notification_CancelOrder">Are you sure you want to cancel the order ?</string>
    <string name="Notification_VisitEndDateHigher">Visit start time is higher than end time</string>
    <string name="Notification_AttentionNeeded">Your attention is needed</string>
    <string name="Notification_OrderSaved">You have successfully saved the order</string>
    <string name="Notification_OrderCopied">You have successfully copied the order</string>
    <string name="Notification_OrderCanceled">You have successfully canceled the order</string>
    <string name="Notification_OrderDeleted">You have successfully deleted the order</string>
    <string name="Notification_OrderItemAdded">You have successfully added an item</string>
    <string name="Notification_OrderItemQuantityAdded">You have successfully change item quantity</string>
    <string name="Notification_OrderItemNotAvailable">There is no item in database</string>
    <string name="Notification_VisitSaved">You have successfully noted the visit</string>
    <string name="Notification_VisitDeleted">You have successfully deleted the visit</string>
    <string name="Notification_ProductNotInDatabase">Product is not in database</string>
    <string name="Notification_OrderCancel">Are you sure you want to cancel the order?</string>
    <string name="Notification_ProductAdded">Product added to the order</string>
    <string name="Notification_WrongUserDiscount">You have entered wrong discount</string>
    <string name="Notification_Date">Missing date</string>
    <string name="Notification_RouteSaved">You have successfully saved the route</string>
    <string name="Notification_RouteSynced">Routes synced</string>
    <string name="Notification_RouteCopied">You have successfully copied the route</string>
    <string name="Notification_RouteCanceled">You have successfully canceled the route</string>
    <string name="Notification_RouteDeleted">You have successfully deleted the route</string>
    <string name="Notification_MissingName">Missing name</string>
    <string name="Notification_MissingClients">Missing clients</string>
    <string name="Notification_Saved">You have successfully saved the record</string>
    <string name="Notification_Bluetooth_DeviceNotAvailable">Bluetooth device not available</string>
    <string name="Notification_Bluetooth_UnableToConnect">Unable to connect</string>
    <string name="Notification_Bluetooth_ConnectionLost">Connection lost</string>
    <string name="DeliveryPlace_AddProperties">Add property</string>
    <string name="DeliveryPlace_AddMerchandises">Add merchandises</string>
    <string name="DeliveryPlace_AddProductPlacement">Add product placement</string>
    <string name="DeliveryPlace_AddCompetitionValue">Add price</string>
    <string name="Country">Country</string>
    <string name="PostalCode">Postal code</string>
    <string name="Logout">Logout</string>
    <string name="Cancel">Cancel</string>
    <string name="CreateLog">Create log</string>
    <string name="History">History</string>
    <string name="Clients">Clients</string>
    <string name="Client">Client</string>
    <string name="Add">Add</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="Telephone">Telephone</string>
    <string name="Fax">Fax</string>
    <string name="Name">Name</string>
    <string name="Description">Description</string>
    <string name="Note">Note</string>
    <string name="StartTime">StartTime</string>
    <string name="EndTime">EndTime</string>
    <string name="OrderDate">Order date</string>
    <string name="PaymentDate">Payment date</string>
    <string name="PaymentMethod">Payment method</string>
    <string name="DeliveryType">Delivery Type</string>
    <string name="Status">Status</string>
    <string name="DeliveryPlace">Delivery place</string>
    <string name="Location">Location</string>
    <string name="Users">Users</string>
    <string name="Authorities">Authorities</string>
    <string name="Date">Date</string>
    <string name="OrderType">Order type</string>
    <string name="BluetoothServiceStart">Start bluetooth service</string>
    <string name="Task">Task</string>
</resources>