<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <LinearLayout
        android:id="@+id/llContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp">

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto-Light.ttf"
            style="@style/header"
            android:visibility="gone"
            android:text="@string/Order_SetProperties"/>

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto-Condensed.ttf"
            style="@style/label"
            android:text="@string/Client" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <AutoCompleteTextView
                android:id="@+id/txbClients"
                style="@style/textbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="15dp"
                android:contentDescription="0"
                android:ems="10" />

            <ImageButton
                android:id="@+id/btnClearClients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginRight="7dp"
                android:src="@drawable/dark_backspace"
                android:background="#00000000" />

        </LinearLayout>

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto-Condensed.ttf"
            style="@style/label"
            android:visibility="gone"
            android:text="@string/DeliveryPlace" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="gone">

            <AutoCompleteTextView
                android:id="@+id/txbDeliveryPlaces"
                style="@style/textbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="15dp"
                android:contentDescription="0"
                android:ems="10" />

            <ImageButton
                android:id="@+id/btnClearDeliveryPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginRight="7dp"
                android:src="@drawable/dark_backspace"
                android:background="#00000000" />

        </LinearLayout>

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto.ttf"
            style="@style/label"
            android:text="@string/OrderDate"
            android:visibility="gone"
            />

        <ba.wurth.mb.Classes.TypefacedTextView
            style="@style/textbox"
            android:focusable="false"
            android:id="@+id/litOrderDate"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:singleLine="true"
            android:visibility="gone"
            android:hint="@string/Date" />

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto.ttf"
            style="@style/label"
            android:visibility="gone"
            android:text="@string/PaymentDate" />

        <ba.wurth.mb.Classes.TypefacedTextView
            style="@style/textbox"
            android:focusable="false"
            android:id="@+id/litPaymentDate"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:singleLine="true"
            android:visibility="gone"
            android:hint="@string/Date" />

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto-Condensed.ttf"
            style="@style/label"
            android:text="@string/Status" />

        <Spinner
            android:id="@+id/spStatus"
            style="@style/Spinner_01" />

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto-Condensed.ttf"
            style="@style/label"
            android:text="@string/PaymentMethod" />

        <Spinner
            android:id="@+id/spPaymentMethod"
            style="@style/Spinner_01" />


        <CheckBox
            style="@style/CheckBox_01"
            android:id="@+id/chkCompleteOrder"
            android:layout_marginTop="25dp"
            android:text="@string/OrderDeliveryType_Complete" />

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto-Condensed.ttf"
            style="@style/label"
            android:text="@string/DeliveryType" />

        <Spinner
            android:id="@+id/spDeliveryType"
            style="@style/Spinner_01" />

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto-Condensed.ttf"
            style="@style/label"
            android:text="@string/OrderType" />

        <Spinner
            android:id="@+id/spOrderType"
            style="@style/Spinner_01" />


        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto-Condensed.ttf"
            style="@style/label"
            android:text="@string/Order_CodeUser" />

        <EditText
            android:id="@+id/txbOrder_CodeUser"
            style="@style/textbox"
            android:singleLine="true"
            android:gravity="left"
            android:text="" />

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto-Condensed.ttf"
            style="@style/label"
            android:text="@string/Order_CodeClient" />

        <EditText
            android:id="@+id/txbOrder_CodeClient"
            style="@style/textbox"
            android:singleLine="true"
            android:gravity="left"
            android:text="" />

        <ba.wurth.mb.Classes.TypefacedTextView
            app:typeface="Roboto-Condensed.ttf"
            style="@style/label"
            android:text="@string/Note" />

        <EditText
            android:id="@+id/txbNote"
            style="@style/textbox"
            android:singleLine="false"
            android:gravity="left"
            android:text=""
            android:layout_height="100dp" />

    </LinearLayout>
</ScrollView>
